<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_edit"
        android:enabled="true"
        android:icon="@drawable/edit_24px"
        android:title="@string/input" />
    <item
        android:id="@+id/navigation_data"
        android:enabled="true"
        android:icon="@drawable/calendar_month_24px"
        android:title="@string/data" />
    <item
        android:id="@+id/navigation_chart"
        android:enabled="true"
        android:icon="@drawable/data_usage_24px"
        android:title="@string/chart" />
    <item
        android:id="@+id/navigation_settings"
        android:enabled="true"
        android:icon="@drawable/settings_24px"
        android:title="@string/settings" />
</menu>