<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/exp_static_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/date_in_japanese"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/exp_date_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:text="年月日()"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/exp_static_text"
        app:layout_constraintEnd_toStartOf="@+id/date_up_button"
        app:layout_constraintStart_toEndOf="@+id/date_down_button"
        app:layout_constraintTop_toTopOf="@+id/exp_static_text" />

    <ImageButton
        android:id="@+id/date_down_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center_vertical"
        android:background="@null"
        android:padding="2dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/exp_date_text"
        app:layout_constraintStart_toEndOf="@+id/exp_static_text"
        app:layout_constraintTop_toTopOf="@+id/exp_date_text"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/chevron_left_24px" />

    <ImageButton
        android:id="@+id/date_up_button"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_gravity="center_vertical"
        android:layout_marginEnd="16dp"
        android:background="@null"
        android:padding="2dp"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/exp_date_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/exp_date_text"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/chevron_right_24px" />

    <TextView
        android:id="@+id/exp_static_text2"
        android:layout_width="wrap_content"
        android:layout_height="32dp"

        android:text="@string/memo_in_japanese"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/memo_edit_text"
        app:layout_constraintStart_toStartOf="@+id/exp_static_text"
        app:layout_constraintTop_toTopOf="@+id/memo_edit_text" />

    <EditText
        android:id="@+id/memo_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:inputType="text"
        android:text="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/exp_static_text2"
        app:layout_constraintTop_toBottomOf="@+id/exp_static_text" />

    <TextView
        android:id="@+id/exp_static_text3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/expenses_in_japanese"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/amount_edit_text"
        app:layout_constraintStart_toStartOf="@+id/exp_static_text2"
        app:layout_constraintTop_toBottomOf="@+id/memo_edit_text" />

    <TextView
        android:id="@+id/exp_static_text4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/yen_in_japanese"
        android:textSize="22sp"
        app:layout_constraintBottom_toBottomOf="@+id/amount_edit_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/amount_edit_text" />

    <EditText
        android:id="@+id/amount_edit_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/exp_static_text4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/exp_static_text3"
        app:layout_constraintTop_toBottomOf="@+id/memo_edit_text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:weightSum="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_edit_text">

        <com.example.householdaccountbook.customviews.ItemListCustomView
            android:id="@+id/category_list_custom_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="16dp"
            android:layout_weight="2" />

        <com.example.householdaccountbook.customviews.ItemListCustomView
            android:id="@+id/payment_method_list_custom_view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>